--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,52 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 229, 231, 233;
+  --background-start-rgb: 0, 101, 147;
+  --background-end-rgb: 0, 0, 0;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
+    --foreground-rgb: 229, 231, 233;
+    --background-start-rgb: 0, 101, 147;
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+/*PALETA
+001C30
+176B87
+64CCC5
+DAFFFB*/
 body {
   color: rgb(var(--foreground-rgb));
+
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+
+.animate-logo {
+  position: relative;
+  animation: animate 5s infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: scale(1);  }
+
+  50% {
+    transform: scale(1.1);  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+html {
+  scroll-behavior: smooth;
 }
